--- a/Document/Example3.ipynb
+++ b/Document/Example3.ipynb
@@ -397,7 +397,7 @@
       "Reference Entropy                                                 1.58496\n",
       "Response Entropy                                                  1.45915\n",
       "SOA1(Landis & Koch)                                               Substantial\n",
-      "SOA2(Fleiss)                                                      Excellent\n",
+      "SOA2(Fleiss)                                                      Intermediate to Good\n",
       "SOA3(Altman)                                                      Good\n",
       "SOA4(Cicchetti)                                                   Excellent\n",
       "SOA5(Cramer)                                                      Very Strong\n",
